Move object serializer to base context
* Inject it where possible instead of using the MuleContext